Regression: Scrambled assigned materials with Subdivision modifier levels #102773

Closed
opened 2022-11-25 23:01:30 +01:00 by Rodger Davis · 8 comments

System Information
Operating system: Linux-6.0.9-arch1-1-x86_64-with-glibc2.36 64 Bits
Graphics card: NVIDIA GeForce GT 1030/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 520.56.06

Blender Version
Broken: 3.4, master
Worked: 3.3

Caused by 2a53e0f437

Short description of error
Subdivision modifier seems to scramble the materials when modifier is turned on.. Cycles renders the materials correctly but the Viewport and Eevee doesn't.
These objects are linked but unlinking them does the same thing.

***Note:***Applying subdivision modifier or turning off subdivision modifier corrects the issue.

Exact steps for others to reproduce the error
Object that has multiple materials with assigned vertices. Put a subdivision modifier on it with viewport subdivision levels.

**System Information** Operating system: Linux-6.0.9-arch1-1-x86_64-with-glibc2.36 64 Bits Graphics card: NVIDIA GeForce GT 1030/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 520.56.06 **Blender Version** Broken: 3.4, master Worked: 3.3 Caused by 2a53e0f437 **Short description of error** Subdivision modifier seems to scramble the materials when modifier is turned on.. Cycles renders the materials correctly but the Viewport and Eevee doesn't. These objects are linked but unlinking them does the same thing. ***Note:***Applying subdivision modifier or turning off subdivision modifier corrects the issue. **Exact steps for others to reproduce the error** Object that has multiple materials with assigned vertices. Put a subdivision modifier on it with viewport subdivision levels. - Open attached file - Make sure GPU subdivision is enabled [subdivision_bug-Beta_and_Alpha.blend](https://archive.blender.org/developer/F13969607/subdivision_bug-Beta_and_Alpha.blend) ![image.png](https://archive.blender.org/developer/F13969592/image.png)
Author

Added subscriber: @RodDavis

Added subscriber: @RodDavis
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. I can redo this when GPU Subdivision is on.
Indeed a regression. I've not been able to build latest master locally so can not bisect atm

Hi, thanks for the report. I can redo this when GPU Subdivision is on. Indeed a regression. I've not been able to build latest master locally so can not bisect atm
Pratik Borhade changed title from Bug - Scrambled assigned materials with Subdivision modifier levels to Regression: Scrambled assigned materials with Subdivision modifier levels 2022-11-26 14:28:54 +01:00
Member

Added subscriber: @pragma37

Added subscriber: @pragma37
Member

Caused by 2a53e0f437
@pragma37 ^

Caused by 2a53e0f437 @pragma37 ^

This issue was referenced by 41733a9c08

This issue was referenced by 41733a9c08ee256293b13f4a370fc09adb915ae1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Miguel Pozo self-assigned this 2022-11-27 14:41:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102773
No description provided.